refactor(RankInfo, LottoService): RankInfo/RankInfoFactory 클래스로 생성, LottoService 클래스의 세부 클래스 생성